k8s/bases/infrastructure/controllers/flux-operator/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-web
  namespace: flux-system
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Flux
    gethomepage.dev/description: Real-time status dashboard for Flux GitOps pipelines.
    gethomepage.dev/group: Kubernetes
    gethomepage.dev/icon: flux-cd
    gethomepage.dev/href: https://flux.${domain}
    gethomepage.dev/pod-selector: app.kubernetes.io/name=flux-operator
spec:
  parentRefs:
    - name: platform
      namespace: kube-system
      sectionName: https
  hostnames:
    - flux.${domain}
  rules:
    - backendRefs:
        - name: flux-operator
          port: 9080
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Strict-Transport-Security
                value: max-age=63072000; includeSubDomains; preload
